re PR c++/27279 (ICE with invalid constructor declaration)

PR c++/27279
	* decl.c (copy_fn_p): Skip functions with invalid first arg.

	* g++.dg/parse/ctor4.C: New test.

From-SVN: r113378