gcc/testsuite/g++.dg/parse/ctor4.C
@@ -1,0 +1,7 @@
+// PR c++/27279
+// { dg-do compile }
+
+struct A
+{
+  A(void,void);  // { dg-error "incomplete type|invalid use" }
+};
